<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/password_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordFragment"
    android:background="@drawable/login_bg">

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="80dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pin_entry_simple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <me.philio.pinentry.PinEntryView
        android:id="@+id/pin_entry_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        app:mask=""
        app:digitBackground="@drawable/low_radius_border"
        app:digitElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="17dp"
        android:textSize="17sp"
        android:text="@string/forgot_password"
        android:textColor="@color/custom_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_entry_simple" />

    <Button
        android:id="@+id/verify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="183dp"
        android:layout_marginTop="75dp"
        android:text="Verify"
        android:background="@drawable/get_otp_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text" />

    <ImageView
        android:id="@+id/finger_print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/finger_print"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_button" />

    <TextView
        android:id="@+id/finger_print_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="15dp"
        android:text="@string/finger_print_text"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finger_print" />


</androidx.constraintlayout.widget.ConstraintLayout>