<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/custom_blue"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/morning_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="63dp"
            android:background="@drawable/get_otp_button"
            android:text="@string/morning_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/morning_image" />

        <Button
            android:id="@+id/night_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="63dp"
            android:background="@drawable/get_otp_button"
            android:text="@string/night_button_text"
            app:layout_constraintStart_toEndOf="@+id/morning_button"
            app:layout_constraintTop_toBottomOf="@+id/morning_image" />

        <Button
            android:id="@+id/saved_files_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/get_otp_button"
            android:text="@string/files_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/morning_button" />

        <ImageView
            android:id="@+id/morning_image"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@drawable/gm_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/home_navigation_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        app:headerLayout="@layout/home_header"
        app:menu="@menu/home_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
